--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -59,9 +59,9 @@
     "\n",
     "# Load the soil samples data and the CRNP dataset using pandas\n",
     "df_soil = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/soil_data.csv\")\n",
-    "df_station = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/station_data.csv\", skiprows=[0,2,3])\n",
     "\n",
-    "# Load the station data"
+    "# Load the station data\n",
+    "df_station = pd.read_csv(\"https://raw.githubusercontent.com/soilwater/crnpy/main/docs/examples/calibration/station_data.csv\", skiprows=[0,2,3])\n"
    ]
   },
   {
@@ -125,9 +125,7 @@
    "source": [
     "## Neutron count processing\n",
     "\n",
-    "Following the example for processing CRNP data from [RDT detectors](../../stationary/example_RDT_station/) neutron counts recorded while the field sampling was done need to be corrected.\n",
-    "\n",
-    "[This dataset](https://github.com/soilwater/crnpy/blob/main/docs/examples/calibration/soil_data.xlsx) contains the raw counts and atmospheric data recorded by the CRNP while the field sampling was done.\n"
+    "Following a similar approach as the example for [Stationary CRNP](../../stationary/example_RDT_station/) neutron counts recorded while the field sampling was done will be corrected."
    ]
   },
   {
@@ -451,17 +449,26 @@
       "40   NEWK   Newark  2.40          50              True\n",
       "28  KIEL2   KielRT  2.36          54              True\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jperaza\\AppData\\Local\\anaconda3\\envs\\crnpy\\lib\\site-packages\\crnpy\\crnpy.py:473: UserWarning: Reference incoming neutron flux not provided. Using first value of incoming neutron flux.\n",
+      "  warnings.warn('Reference incoming neutron flux not provided. Using first value of incoming neutron flux.')\n"
+     ]
     }
    ],
    "source": [
-    "# Find stations with cutoff rigidity similar to estimated by lat,lon, \n",
-    "# filtering the time window from experiment setup to the end of the calibration\n",
+    "# Find stations with cutoff rigidity similar to the one estimated by lat,lon, \n",
+    "# Filtering the time window from experiment setup to the end of the calibration\n",
     "crnpy.find_neutron_monitor(crnpy.cutoff_rigidity(39.1, -96.6), start_date = deployment_date, end_date = calibration_end)\n",
     "\n",
     "#Download data for one of the similar stations and add to df\n",
     "incoming_neutrons = crnpy.get_incoming_neutron_flux(deployment_date, calibration_end, station=\"DRBS\", utc_offset=-5)\n",
     "df['incoming_flux']=crnpy.interpolate_incoming_flux(incoming_neutrons, timestamps=df['TIMESTAMP'])\n",
-    "ref_incoming_flux = incoming_neutrons.iloc[0]\n"
+    "ref_incoming_flux = incoming_neutrons.iloc[0]\n",
+    "df['corrected'] = crnpy.incoming_flux_correction(df['total_counts'], incoming_neutrons=df['incoming_flux'])\n"
    ]
   },
   {
@@ -479,34 +486,14 @@
    "execution_count": 6,
    "id": "6a146046-a47d-4018-91e9-213075a70da9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No count time columns provided. Using timestamp index to compute count time.\n",
-      "Using median count time as expected count time: 3600.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jperaza\\AppData\\Local\\anaconda3\\envs\\crnpy\\lib\\site-packages\\crnpy\\crnpy.py:471: UserWarning: Reference incoming neutron flux not provided. Using first value of incoming neutron flux.\n",
-      "  warnings.warn('Reference incoming neutron flux not provided. Using first value of incoming neutron flux.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fill NaN values in atmospheric data\n",
     "df[['pressure', 'RH', 'T']] = crnpy.fill_missing_atm(df[['barometric_pressure_Avg', 'relative_humidity_Avg', 'air_temperature_Avg']])\n",
-    "# Correct count by atmospheric variables and incoming flux\n",
-    "df['total_counts'] = crnpy.fill_counts(df['total_counts'])\n",
     "\n",
     "# Correct count by atmospheric variables and incoming flux\n",
-    "df['corrected'] = crnpy.humidity_correction(df['total_counts'],humidity=df['RH'], temp=df['T'], Aref=0)\n",
-    "df['corrected'] = crnpy.pressure_correction(df['corrected'], pressure=df['pressure'], Pref=976, L=130)\n",
-    "df['corrected'] = crnpy.incoming_flux_correction(df['corrected'], incoming_neutrons=df['incoming_flux'])\n"
+    "df['corrected'] = crnpy.humidity_correction(df['corrected'],humidity=df['RH'], temp=df['T'], Aref=0)\n",
+    "df['corrected'] = crnpy.pressure_correction(df['corrected'], pressure=df['pressure'], Pref=976, L=130)\n"
    ]
   },
   {
@@ -519,12 +506,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean corrected neutron count during sampling: 1538.0\n"
+      "Mean corrected neutron count during sampling: 1537\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Mean corrected neutron count during sampling: {df['corrected'].mean().round()}\")\n"
+    "print(f\"Mean corrected neutron count during sampling: {int(df['corrected'].mean())}\")\n"
    ]
   },
   {
@@ -534,7 +521,7 @@
    "source": [
     "## Solving the equation for $N_0$\n",
     "\n",
-    "Previous steps estimated the a field volumetric water content of `0.256` and an average neutron count of `1538`. Using [scipy.optimize.root()](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html) $N_0$ is estimated given the observed value of $\\theta_v$ and neutron counts."
+    "Previous steps estimated the a field volumetric water content of `0.263` and an average neutron count of `1537`. Using [`scipy.optimize.root()`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.root.html) $N_0$ is estimated given the observed value of $\\theta_v$ and neutron counts."
    ]
   },
   {
