--- a/docs/examples/rover/Hydroinnova_rover_example.ipynb
+++ b/docs/examples/rover/Hydroinnova_rover_example.ipynb
@@ -317,7 +317,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jperaza\\AppData\\Local\\anaconda3\\envs\\crnpy\\lib\\site-packages\\crnpy\\crnpy.py:471: UserWarning: Reference incoming neutron flux not provided. Using first value of incoming neutron flux.\n",
+      "C:\\Users\\jperaza\\AppData\\Local\\anaconda3\\envs\\crnpy\\lib\\site-packages\\crnpy\\crnpy.py:473: UserWarning: Reference incoming neutron flux not provided. Using first value of incoming neutron flux.\n",
       "  warnings.warn('Reference incoming neutron flux not provided. Using first value of incoming neutron flux.')\n"
      ]
     }
@@ -347,7 +347,7 @@
    "source": [
     "#### Atmospheric correction\n",
     "\n",
-    "NaN values in the atmospheric data are filled. The neutron counts are then corrected for atmospheric variables and the incoming neutron flux. See [`humidity_correction()`](../../../reference/#crnpy.crnpy.humidity_correction) and [`pressure_correction()`](../../../reference/#crnpy.crnpy.pressure_correction)"
+    "NaN values in the atmospheric data are filled. The neutron counts are then corrected for atmospheric variables. See [`humidity_correction()`](../../../reference/#crnpy.crnpy.humidity_correction) and [`pressure_correction()`](../../../reference/#crnpy.crnpy.pressure_correction)"
    ]
   },
   {
