Main module changes
Allowing import crnpy directly.
Updates of examples to v0.5  in progress

--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "130e6b13",
    "metadata": {
     "collapsed": false,
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "1065d13b-5e22-4611-8e91-6adc0a233c3a",
    "metadata": {},
    "outputs": [
@@ -188,18 +188,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      field    date  core_number  distance_from_station   latitude  longitude  \\\n",
-       "0  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
+       "      field    date  core_number  distance_from_station   latitude  longitude   \n",
+       "0  Flickner  22-Oct            1                      5  N38.23459  W97.57101  \\\n",
        "1  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
        "2  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
        "\n",
-       "   top_depth  bottom_depth  core_diameter  wet_mass_with_bag  ...  can_number  \\\n",
-       "0          0             5          30.49              45.31  ...           1   \n",
+       "   top_depth  bottom_depth  core_diameter  wet_mass_with_bag  ...  can_number   \n",
+       "0          0             5          30.49              45.31  ...           1  \\\n",
        "1          5            10          30.49              69.53  ...           2   \n",
        "2         10            25          30.49             214.90  ...           3   \n",
        "\n",
-       "   mass_empty_can  wet_mass_with_can  dry_mass_with_can  mass_water  theta_g  \\\n",
-       "0           52.10              92.03              85.31        6.72    0.202   \n",
+       "   mass_empty_can  wet_mass_with_can  dry_mass_with_can  mass_water  theta_g   \n",
+       "0           52.10              92.03              85.31        6.72    0.202  \\\n",
        "1           51.85             115.97             103.85       12.12    0.233   \n",
        "2           51.56             260.97             219.77       41.20    0.245   \n",
        "\n",
@@ -211,7 +211,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "0f228c16-62d0-4afc-92ae-b266a4d8e825",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "4317bdea-2810-418d-8a17-5f1a99a0ea34",
    "metadata": {},
    "outputs": [
@@ -372,28 +372,28 @@
        "</div>"
       ],
       "text/plain": [
-       "            TIMESTAMP  RECORD station      farm          field  latitude  \\\n",
-       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461   \n",
+       "            TIMESTAMP  RECORD station      farm          field  latitude   \n",
+       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461  \\\n",
        "1 2021-09-22 13:00:00       1   KS003  Flickner  Rainfed South  38.23461   \n",
        "2 2021-09-22 14:00:00       2   KS003  Flickner  Rainfed South  38.23461   \n",
        "\n",
-       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...  \\\n",
-       "0  -97.57095       455                13.52      29.04  ...   \n",
+       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...   \n",
+       "0  -97.57095       455                13.52      29.04  ...  \\\n",
        "1  -97.57095       455                13.53      29.98  ...   \n",
        "2  -97.57095       455                13.53      30.43  ...   \n",
        "\n",
-       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg  \\\n",
-       "0               352.3                 4.20                22.30   \n",
+       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg   \n",
+       "0               352.3                 4.20                22.30  \\\n",
        "1               291.6                 9.02                22.90   \n",
        "2               292.8                 5.54                23.38   \n",
        "\n",
-       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg  \\\n",
-       "0                9.20                      973                  41.30   \n",
+       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg   \n",
+       "0                9.20                      973                  41.30  \\\n",
        "1                9.08                      972                  32.63   \n",
        "2                8.68                      971                  30.25   \n",
        "\n",
-       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg  \\\n",
-       "0                             26.4                -1.000               1.000   \n",
+       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg   \n",
+       "0                             26.4                -1.000               1.000  \\\n",
        "1                             26.8                -0.975               0.950   \n",
        "2                             27.2                -0.775               0.625   \n",
        "\n",
@@ -405,7 +405,7 @@
        "[3 rows x 27 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "e4364ce3-2b2b-40e6-ab3d-447509c92b83",
    "metadata": {},
    "outputs": [
@@ -550,28 +550,28 @@
        "</div>"
       ],
       "text/plain": [
-       "            TIMESTAMP  RECORD station      farm          field  latitude  \\\n",
-       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461   \n",
+       "            TIMESTAMP  RECORD station      farm          field  latitude   \n",
+       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461  \\\n",
        "1 2021-09-22 13:00:00       1   KS003  Flickner  Rainfed South  38.23461   \n",
        "2 2021-09-22 14:00:00       2   KS003  Flickner  Rainfed South  38.23461   \n",
        "\n",
-       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...  \\\n",
-       "0  -97.57095       455                13.52      29.04  ...   \n",
+       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...   \n",
+       "0  -97.57095       455                13.52      29.04  ...  \\\n",
        "1  -97.57095       455                13.53      29.98  ...   \n",
        "2  -97.57095       455                13.53      30.43  ...   \n",
        "\n",
-       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg  \\\n",
-       "0               352.3                 4.20                22.30   \n",
+       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg   \n",
+       "0               352.3                 4.20                22.30  \\\n",
        "1               291.6                 9.02                22.90   \n",
        "2               292.8                 5.54                23.38   \n",
        "\n",
-       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg  \\\n",
-       "0                9.20                      973                  41.30   \n",
+       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg   \n",
+       "0                9.20                      973                  41.30  \\\n",
        "1                9.08                      972                  32.63   \n",
        "2                8.68                      971                  30.25   \n",
        "\n",
-       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg  \\\n",
-       "0                             26.4                -1.000               1.000   \n",
+       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg   \n",
+       "0                             26.4                -1.000               1.000  \\\n",
        "1                             26.8                -0.975               0.950   \n",
        "2                             27.2                -0.775               0.625   \n",
        "\n",
@@ -583,7 +583,7 @@
        "[3 rows x 27 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "5d025dd3-849e-4bf5-abfb-95d00cf88907",
    "metadata": {},
    "outputs": [],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "id": "036787fd-fe1b-41fb-8cb4-d708168d4709",
    "metadata": {},
    "outputs": [],
@@ -659,10 +659,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "193380bf-b091-4e39-889f-751ec36dfc30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Select a station with an altitude similar to that of your location. For more information go to: 'https://www.nmdb.eu/nest/help.php#helpstations\n",
+      "\n",
+      "Your cutoff rigidity is 2.87 GV\n",
+      "     STID     NAME     R  Altitude_m  Period available\n",
+      "13   DRBS  Dourbes  3.18         225              True\n",
+      "40   NEWK   Newark  2.40          50              True\n",
+      "28  KIEL2   KielRT  2.36          54              True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STID</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>R</th>\n",
+       "      <th>Altitude_m</th>\n",
+       "      <th>Period available</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>DRBS</td>\n",
+       "      <td>Dourbes</td>\n",
+       "      <td>3.18</td>\n",
+       "      <td>225</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>NEWK</td>\n",
+       "      <td>Newark</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>50</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>KIEL2</td>\n",
+       "      <td>KielRT</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>54</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     STID     NAME     R  Altitude_m  Period available\n",
+       "13   DRBS  Dourbes  3.18         225              True\n",
+       "40   NEWK   Newark  2.40          50              True\n",
+       "28  KIEL2   KielRT  2.36          54              True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find the cutoff rigidity for the location\n",
     "cutoff_rigidity = crnpy.cutoff_rigidity(39.1, -96.6)\n",
@@ -675,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "5ac8cf0d-c151-4651-840c-39d8e0b5af58",
    "metadata": {},
    "outputs": [],
@@ -700,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "d750289d-3a6d-40c4-b144-30cddf629be3",
    "metadata": {},
    "outputs": [],
@@ -721,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "457e6db7-a5ab-4424-a93b-7b0f4a46fe45",
    "metadata": {},
    "outputs": [],
@@ -736,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "id": "515c18bc-610f-40f8-af42-e4f77f1c7939",
    "metadata": {},
    "outputs": [
@@ -752,7 +835,7 @@
    "source": [
     "# Determine the mean corrected counts during the calibration survey\n",
     "idx_cal_period = (df_station['TIMESTAMP'] >= calibration_start) & (df_station['TIMESTAMP'] <= calibration_end)\n",
-    "mean_cal_counts = df_station.loc[idx_cal_period, 'corrected_neutrons'].mean()\n",
+    "mean_cal_counts = df_station.loc[idx_cal_period, 'total_corrected_neutrons'].mean()\n",
     "\n",
     "print(f\"Mean volumetric Water content during calibration survey: {round(field_theta_v,3)}\")\n",
     "print(f\"Mean corrected counts during calibration: {round(mean_cal_counts)} counts\")\n"
@@ -770,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "id": "7f1e3c4f-3f0e-43d8-b763-e9b318d18566",
    "metadata": {},
    "outputs": [
@@ -808,6 +891,14 @@
     "\n",
     "Patrignani, A., Ochsner, T. E., Montag, B., & Bellinger, S. (2021). A novel lithium foil cosmic-ray neutron detector for measuring field-scale soil moisture. Frontiers in Water, 3, 673185."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "955957a4-a165-4102-b13f-e64858ce216c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -826,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
