--- a/docs/examples/calibration/calibration.ipynb
+++ b/docs/examples/calibration/calibration.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "130e6b13",
    "metadata": {
     "collapsed": false,
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "1065d13b-5e22-4611-8e91-6adc0a233c3a",
    "metadata": {},
    "outputs": [
@@ -188,18 +188,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      field    date  core_number  distance_from_station   latitude  longitude   \n",
-       "0  Flickner  22-Oct            1                      5  N38.23459  W97.57101  \\\n",
+       "      field    date  core_number  distance_from_station   latitude  longitude  \\\n",
+       "0  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
        "1  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
        "2  Flickner  22-Oct            1                      5  N38.23459  W97.57101   \n",
        "\n",
-       "   top_depth  bottom_depth  core_diameter  wet_mass_with_bag  ...  can_number   \n",
-       "0          0             5          30.49              45.31  ...           1  \\\n",
+       "   top_depth  bottom_depth  core_diameter  wet_mass_with_bag  ...  can_number  \\\n",
+       "0          0             5          30.49              45.31  ...           1   \n",
        "1          5            10          30.49              69.53  ...           2   \n",
        "2         10            25          30.49             214.90  ...           3   \n",
        "\n",
-       "   mass_empty_can  wet_mass_with_can  dry_mass_with_can  mass_water  theta_g   \n",
-       "0           52.10              92.03              85.31        6.72    0.202  \\\n",
+       "   mass_empty_can  wet_mass_with_can  dry_mass_with_can  mass_water  theta_g  \\\n",
+       "0           52.10              92.03              85.31        6.72    0.202   \n",
        "1           51.85             115.97             103.85       12.12    0.233   \n",
        "2           51.56             260.97             219.77       41.20    0.245   \n",
        "\n",
@@ -211,7 +211,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "0f228c16-62d0-4afc-92ae-b266a4d8e825",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "4317bdea-2810-418d-8a17-5f1a99a0ea34",
    "metadata": {},
    "outputs": [
@@ -372,28 +372,28 @@
        "</div>"
       ],
       "text/plain": [
-       "            TIMESTAMP  RECORD station      farm          field  latitude   \n",
-       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461  \\\n",
+       "            TIMESTAMP  RECORD station      farm          field  latitude  \\\n",
+       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461   \n",
        "1 2021-09-22 13:00:00       1   KS003  Flickner  Rainfed South  38.23461   \n",
        "2 2021-09-22 14:00:00       2   KS003  Flickner  Rainfed South  38.23461   \n",
        "\n",
-       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...   \n",
-       "0  -97.57095       455                13.52      29.04  ...  \\\n",
+       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...  \\\n",
+       "0  -97.57095       455                13.52      29.04  ...   \n",
        "1  -97.57095       455                13.53      29.98  ...   \n",
        "2  -97.57095       455                13.53      30.43  ...   \n",
        "\n",
-       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg   \n",
-       "0               352.3                 4.20                22.30  \\\n",
+       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg  \\\n",
+       "0               352.3                 4.20                22.30   \n",
        "1               291.6                 9.02                22.90   \n",
        "2               292.8                 5.54                23.38   \n",
        "\n",
-       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg   \n",
-       "0                9.20                      973                  41.30  \\\n",
+       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg  \\\n",
+       "0                9.20                      973                  41.30   \n",
        "1                9.08                      972                  32.63   \n",
        "2                8.68                      971                  30.25   \n",
        "\n",
-       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg   \n",
-       "0                             26.4                -1.000               1.000  \\\n",
+       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg  \\\n",
+       "0                             26.4                -1.000               1.000   \n",
        "1                             26.8                -0.975               0.950   \n",
        "2                             27.2                -0.775               0.625   \n",
        "\n",
@@ -405,7 +405,7 @@
        "[3 rows x 27 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "e4364ce3-2b2b-40e6-ab3d-447509c92b83",
    "metadata": {},
    "outputs": [
@@ -550,28 +550,28 @@
        "</div>"
       ],
       "text/plain": [
-       "            TIMESTAMP  RECORD station      farm          field  latitude   \n",
-       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461  \\\n",
+       "            TIMESTAMP  RECORD station      farm          field  latitude  \\\n",
+       "0 2021-09-22 12:00:00       0   KS003  Flickner  Rainfed South  38.23461   \n",
        "1 2021-09-22 13:00:00       1   KS003  Flickner  Rainfed South  38.23461   \n",
        "2 2021-09-22 14:00:00       2   KS003  Flickner  Rainfed South  38.23461   \n",
        "\n",
-       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...   \n",
-       "0  -97.57095       455                13.52      29.04  ...  \\\n",
+       "   longitude  altitude  battery_voltage_Min  PTemp_Avg  ...  \\\n",
+       "0  -97.57095       455                13.52      29.04  ...   \n",
        "1  -97.57095       455                13.53      29.98  ...   \n",
        "2  -97.57095       455                13.53      30.43  ...   \n",
        "\n",
-       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg   \n",
-       "0               352.3                 4.20                22.30  \\\n",
+       "   wind_direction_Avg  wind_speed_gust_Max  air_temperature_Avg  \\\n",
+       "0               352.3                 4.20                22.30   \n",
        "1               291.6                 9.02                22.90   \n",
        "2               292.8                 5.54                23.38   \n",
        "\n",
-       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg   \n",
-       "0                9.20                      973                  41.30  \\\n",
+       "   vapor_pressure_Avg  barometric_pressure_Avg  relative_humidity_Avg  \\\n",
+       "0                9.20                      973                  41.30   \n",
        "1                9.08                      972                  32.63   \n",
        "2                8.68                      971                  30.25   \n",
        "\n",
-       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg   \n",
-       "0                             26.4                -1.000               1.000  \\\n",
+       "   humidity_sensor_temperature_Avg  tilt_north_south_Avg  tilt_west_east_Avg  \\\n",
+       "0                             26.4                -1.000               1.000   \n",
        "1                             26.8                -0.975               0.950   \n",
        "2                             27.2                -0.775               0.625   \n",
        "\n",
@@ -583,7 +583,7 @@
        "[3 rows x 27 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "5d025dd3-849e-4bf5-abfb-95d00cf88907",
    "metadata": {},
    "outputs": [],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "036787fd-fe1b-41fb-8cb4-d708168d4709",
    "metadata": {},
    "outputs": [],
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "193380bf-b091-4e39-889f-751ec36dfc30",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
        "28  KIEL2   KielRT  2.36          54              True"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "5ac8cf0d-c151-4651-840c-39d8e0b5af58",
    "metadata": {},
    "outputs": [],
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "d750289d-3a6d-40c4-b144-30cddf629be3",
    "metadata": {},
    "outputs": [],
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "457e6db7-a5ab-4424-a93b-7b0f4a46fe45",
    "metadata": {},
    "outputs": [],
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "515c18bc-610f-40f8-af42-e4f77f1c7939",
    "metadata": {},
    "outputs": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "7f1e3c4f-3f0e-43d8-b763-e9b318d18566",
    "metadata": {},
    "outputs": [
@@ -891,14 +891,6 @@
     "\n",
     "Patrignani, A., Ochsner, T. E., Montag, B., & Bellinger, S. (2021). A novel lithium foil cosmic-ray neutron detector for measuring field-scale soil moisture. Frontiers in Water, 3, 673185."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "955957a4-a165-4102-b13f-e64858ce216c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -917,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
